--- a/CompFacil.LojaVirtual.Web/Views/Shared/ProdutoDetalhes.cshtml
+++ b/CompFacil.LojaVirtual.Web/Views/Shared/ProdutoDetalhes.cshtml
@@ -1,17 +1,18 @@
 ﻿@model CompFacil.LojaVirtual.Dominio.Entidades.Produto
 
+
+
 <div class="well">
-    <h3><strong>@Model.Nome</strong></h3>
-    <h3>
-        <span class="pull-right label label-primary" style="height:28px">@Model.Preco.ToString("c")</span>
-            @using (Html.BeginForm("Index", "Carrinho"))
-            {
-                <div class="pull-right">
-                    @Html.HiddenFor(x => x.ProdutoID)
-                    @Html.Hidden("ReturnUrl", Request.Url.PathAndQuery)
-                    <input type="submit" class="btn btn-success" value="Comprar"  style="height:28px">
-                </div>
-            }
-    </h3>
-    <h3><span class="lead">@Model.Descricao</span></h3>
+    <h3><strong>@Model.Nome</strong>  </h3>
+    <h3><span class="pull-right label label-primary">@Model.Preco.ToString("c")</span></h3>
+
+    @using (Html.BeginForm("Adicionar", "Carrinho"))
+    {
+        <div class="pull-right">
+            @Html.HiddenFor(x => x.ProdutoID)
+            @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
+            <input type="submit" class="btn btn-success" value="Comprar" />
+        </div>
+    }
+    <h3>  <span class="lead">@Model.Descricao</span></h3>
 </div>
