--- a/CompFacil.LojaVirtual.Web/Views/Shared/_Layout.cshtml
+++ b/CompFacil.LojaVirtual.Web/Views/Shared/_Layout.cshtml
@@ -11,12 +11,14 @@
 <body>
     <div class="navbar navbar-inverse" role="navigation">
         <a class="navbar-brand" href="#">Compfacil Loja Virtual - Seu esporte é aqui</a>
+        <div id="checkout" class="col-xs-8">
+            @Html.Action("Resumo", "Carrinho")
+        </div>
     </div>
     <div class="row panel">
         <div id="categorias" class="col-xs-3">
             @Html.Action("Menu", "Categoria")
         </div>
-
         <div id="categorias" class="col-xs-8">
             @RenderBody()
         </div>
