--- a/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Shared/_AdministrativoLayout.cshtml
+++ b/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Shared/_AdministrativoLayout.cshtml
@@ -14,7 +14,7 @@
     <div>
         @if (TempData["mensagem"] != null)
         {
-            <div class="aalert alert-sucess">@TempData["mensagem"]</div>
+            <div class="alert alert-sucess">@TempData["mensagem"]</div>
         }
         @RenderBody()
     </div>
