--- a/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Produto/Alterar.cshtml
+++ b/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Produto/Alterar.cshtml
@@ -1,16 +1,44 @@
 ﻿@model CompFacil.LojaVirtual.Dominio.Entidades.Produto
 
 @{
-    ViewBag.Title = "Alterar";
+    ViewBag.Title = "Alterar - " + @Model.Nome;
     Layout = "~/Areas/Administrativo/Views/Shared/_AdministrativoLayout.cshtml";
 }
 
-<h2>Alterar - @Model.Nome</h2>
+<div class="panel">
+    <div lass="panel-heading">
+        <h3>Alterar - @Model.Nome</h3>
+    </div>
 
-@using (Html.BeginForm())
-{
-    @Html.EditorForModel()  
-    <input type="submit" value="Salvar" />
-    
-    @Html.ActionLink("Cancelar e Retornar", "Index")
-}
+    @using (Html.BeginForm())
+    {
+        <div class="panel-body">
+            @Html.HiddenFor(m => m.ProdutoID)
+
+            @foreach (var property in ViewData.ModelMetadata.Properties)
+            {
+                if (property.PropertyName != "ProdutoID")
+                {
+                    <div class="form-group">
+                        <label>
+                            @(property.DisplayName ?? property.PropertyName)
+                        </label>
+
+                        @if (property.PropertyName == "Descricao")
+                        {
+                            @Html.TextArea(property.PropertyName, null, new { @class = "form-control", rows = 5 })
+                        }
+                        else
+                        {
+                            @Html.TextBox(property.PropertyName, null, new { @class = "form-control" })
+                        }
+                    </div>
+                }
+            }
+        </div>
+        <div class="panel-footer">
+            <input type="submit" value="Salvar" class="btn btn-primary" />
+            @Html.ActionLink("Cancelar e Retornar", "Index", null, new { @class = "btn btn-default" })
+        </div>
+    }
+</div>
