--- a/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Produto/Alterar.cshtml
+++ b/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Produto/Alterar.cshtml
@@ -32,6 +32,7 @@
                         {
                             @Html.TextBox(property.PropertyName, null, new { @class = "form-control" })
                         }
+                        @Html.ValidationMessage(property.PropertyName)
                     </div>
                 }
             }
