--- a/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Shared/_AdministrativoLayout.cshtml
+++ b/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Shared/_AdministrativoLayout.cshtml
@@ -7,8 +7,12 @@
     <link href="~/Content/ErrorStyle.css" rel="stylesheet" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" type="text/css" />
-    <script src="~/Scripts/jquery-2.1.3.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/jquery-2.1.3.js"></script>
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/jquery.sticky.js"></script>
 </head>
 <body>
     <div>
