--- a/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Produto/Index.cshtml
+++ b/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Produto/Index.cshtml
@@ -35,11 +35,12 @@
                             @item.Preco.ToString("c")
                         </td>
                         <td class="text-center">
-                            @using (Html.BeginForm("Excluir", "Produto"))
+                            @*@using (Html.BeginForm("Excluir", "Produto"))
                             {
                                 @Html.Hidden("ProdutoID", item.ProdutoID)
                                 <input type="submit" class="btn btn-default btn-xs" value="Excluir" />
-                            }
+                            }*@
+                            <input type="submit" class="btn btn-default btn-xs" id="@item.ProdutoID" name="@item.Nome"value="Excluir" />
                         </td>
                     </tr>
                 }
@@ -47,3 +48,5 @@
         </table>
     </div>
 </div>
+
+@Html.Partial("Confirmacao")
