--- a/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Shared/_AdministrativoLayout.cshtml
+++ b/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Shared/_AdministrativoLayout.cshtml
@@ -18,7 +18,7 @@
     <div>
         @if (TempData["mensagem"] != null)
         {
-            <div class="alert alert-sucess">@TempData["mensagem"]</div>
+            <div class="alert id="mensagem" alert-sucess">@TempData["mensagem"]</div>
         }
         
         @RenderBody()
