Update: CRUD at ADM area is finished

--- a/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Produto/Confirmacao.cshtml
+++ b/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Produto/Confirmacao.cshtml
@@ -2,15 +2,63 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</button>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h4 class="modal-tittle" id="deleteModalLabel">Confirmação</h4>
             </div>
             <div class="modal-body">
-                <p>Você realmente deseja excluir este item?<em><strong>"<span></span>"</strong></em>&nbsp;?</p>
+                <input type="hidden" />
+                <p>Você realmente deseja excluir o item <em><strong>"<span></span>"</strong></em>&nbsp;?</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success">ConfirmarS</button>
+                <button type="button" class="btn btn-success">Confirmar</button>
             </div>
         </div>
     </div>
 </div>
+
+
+<script>
+    $(function () {
+
+        //Abrir o modal
+        $(".btn-xs").click(function (e) {
+            e.preventDefault();
+            var id = this.id;
+            var nome = this.name;
+            $("#deleteModal .modal-body input[type=hidden]").val(id);
+            $("#deleteModal .modal-body span").text(nome);
+            $("#deleteModal").modal('show');
+        });
+
+        $("#deleteModal .modal-footer button").click(function (e) {
+            e.preventDefault();
+            var url = "/Administrativo/Produto/Excluir/";
+            var id = $(".modal-body input[type=hidden]").val();
+            var rowNo = '#row-' + id;   
+
+            $.ajax({
+                url: url,
+                type: 'post',
+                dataType: 'json',
+                data: { ProdutoID: id },
+                beforeSend: function () {
+                    var loading = "<span><em>Excluindo</em>&nbsp;<i class='glyphicon glyphicon-refresh icon-refresh-animate'></i></span>";
+                    $('#deleteModal .modal-header h4').after(loading);
+                },
+                success: function () {
+
+                    $('#deleteModal').modal('hide');
+
+                    $(rowNo).animate({ opacity: 0.0 }, 400, function () {
+                        $(rowNo).remove();
+                    });
+                },
+                complete: function (data) {
+                    $("#divexcluir").empty();
+                    $("#divexcluir").addClass("alert alert-success");
+                    $("#divexcluir").html(data.responseText);
+                }
+            });
+        });
+    });
+</script>
