--- a/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Produto/Index.cshtml
+++ b/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Produto/Index.cshtml
@@ -1,21 +1,21 @@
 ﻿@model IEnumerable<CompFacil.LojaVirtual.Dominio.Entidades.Produto>
 
 @{
-    ViewBag.Title = " - Administrativo";
+    ViewBag.Title = "Administrativo - Produtos";
     Layout = "~/Areas/Administrativo/Views/Shared/_AdministrativoLayout.cshtml";
 }
-
-<div class="alert alert-sucess" id="mensagem"></div>
+<script src="~/Scripts/bootstrap.js"></script>
+<div id="divexcluir"></div>
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3>Compfacil Loja Virtual - Administrativo - Produtos</h3>
+        <h3>CompFácil Loja Virtual - Administrivo - Produtos</h3>
     </div>
     <div class="panel-body">
-        @Html.ActionLink("Novo Produto", "NovoProduto", "Produto", new { @class = "btn btn-default" })
-        <table class="table table-striped table-condesed table-bordered">
+        @Html.ActionLink("Novo produto", "NovoProduto", "Produto", new { @class = "btn btn-default" })
+        <table class="table table-striped table-condensed table-bordered">
             <thead>
                 <tr>
-                    <th class="text-right">#Id</th>
+                    <th class="text-right">#ID</th>
                     <th>Nome</th>
                     <th class="text-right">Preço</th>
                     <th class="text-center">Excluir</th>
@@ -35,12 +35,7 @@
                             @item.Preco.ToString("c")
                         </td>
                         <td class="text-center">
-                            @*@using (Html.BeginForm("Excluir", "Produto"))
-                            {
-                                @Html.Hidden("ProdutoID", item.ProdutoID)
-                                <input type="submit" class="btn btn-default btn-xs" value="Excluir" />
-                            }*@
-                            <input type="submit" class="btn btn-default btn-xs" id="@item.ProdutoID" name="@item.Nome"value="Excluir" />
+                            <input type="submit" class="btn btn-default btn-xs" id="@item.ProdutoID" name="@item.Nome" value="Excluir" />
                         </td>
                     </tr>
                 }
@@ -48,5 +43,6 @@
         </table>
     </div>
 </div>
+
 
 @Html.Partial("Confirmacao")
