--- a/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Shared/_AdministrativoLayout.cshtml
+++ b/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Shared/_AdministrativoLayout.cshtml
@@ -4,21 +4,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Compfacil Loja Virtual - </title>
-    <link href="~/Content/ErrorStyle.css" rel="stylesheet" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
+    <link href="~/Content/ErroEstilo.css" rel="stylesheet" />
+    
+    <script src="~/Scripts/bootstrap.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-    <script src="~/Scripts/jquery-2.1.3.js"></script>
+    <script src="~/Scripts/jquery-2.1.3.min.js"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/Scripts/jquery.sticky.js"></script>
 </head>
 <body>
     <div>
         @if (TempData["mensagem"] != null)
         {
-            <div class="alert id="mensagem" alert-sucess">@TempData["mensagem"]</div>
+            <div class="alert id=" mensagem" alert-success">@TempData["mensagem"]</div>
         }
         
         @RenderBody()
