--- a/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Produto/Alterar.cshtml
+++ b/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Produto/Alterar.cshtml
@@ -10,15 +10,23 @@
         <h3>@Model.Nome</h3>
     </div>
 
-    @using (Html.BeginForm("Alterar", "Produto"))
+    @*@using (Html.BeginForm("Alterar", "Produto"))*@
+    @using (Html.BeginForm("Alterar", "Produto", FormMethod.Post, new { enctype = "multipart/form"}))
     {
         <div class="panel-body">
             @Html.HiddenFor(m => m.ProdutoID)
 
             @foreach (var property in ViewData.ModelMetadata.Properties)
             {
-                if (property.PropertyName != "ProdutoID")
-                {
+               // if (property.PropertyName != "ProdutoID")
+                //{
+                switch(property.PropertyName)
+                { 
+                    case "ProdutoID":
+                    case "Imagem":
+                    case "ImagemMimeType":
+                        break;
+                    default:
                     <div class="form-group">
                         <label>
                             @(property.DisplayName ?? property.PropertyName)
@@ -34,8 +42,30 @@
                         }
                         @Html.ValidationMessage(property.PropertyName)
                     </div>
+                        break;
                 }
             }
+
+            @*Selecionar a Imagem File Upload*@
+            <div class="form-group">
+                <div style="position:relative;">
+                    <label>Imagem</label>
+                    <a href="javascript:;" class="btn">
+                        Selecione a imagem...
+                        <input type="file" name= "Imagem" size="40" style="position:absolute; z-index:2; top:0; left:0; filter:alpha(opacity=0); opacity:0; background-color:transparent; color:transparent;" onchange ='$("#upload-file-info").html($(this).val());' />
+                    </a>
+                    <span id="upload-file-info" class="label label-info"></span>
+                </div>
+                @if(Model.Imagem == null)
+                { 
+                   <div class="form-control-static">Nenhuma imagem</div>
+                }
+                else
+                {
+                    //<img class="img-thumbnail" width="120" height="120" src="@Url.Action("ObterImagem", "Produto", new { Model.ProdutoID})" />
+                }
+            </div>
+
         </div>
         <div class="panel-footer">
             <input type="submit" value="Salvar" class="btn btn-primary" />
