--- a/CompFacil.LojaVirtual.Web/Views/Autenticacao/Login.cshtml
+++ b/CompFacil.LojaVirtual.Web/Views/Autenticacao/Login.cshtml
@@ -40,8 +40,9 @@
                     <strong> CompFacil - Login</strong>
                 </div>
                 <div class="panel-body">
-                    @using (Html.BeginForm("Login", "Autenticacao", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-sigin" }))
+                    @using (Html.BeginForm("Login", "Autenticacao", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-signin" }))
                     {
+                        @Html.ValidationSummary();
                         <fieldset>
                             <div class="row">
                                 <div class="center-block">
