--- a/CompFacil.LojaVirtual.Web/Views/Shared/_Layout.cshtml
+++ b/CompFacil.LojaVirtual.Web/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link href="~/Content/ErrorStyle.css" rel="stylesheet" />
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/bootstrap-theme.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>    
 </head>
 <body>
