--- a/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Shared/_AdministrativoLayout.cshtml
+++ b/CompFacil.LojaVirtual.Web/Areas/Administrativo/Views/Shared/_AdministrativoLayout.cshtml
@@ -15,13 +15,13 @@
     <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
     <script src="~/Scripts/jquery.sticky.js"></script>
 </head>
-<body>
-    <div>
+<body style="background-image: url('../../background.jpg')">
+    <div style="opacity:0.9">
         @if (TempData["mensagem"] != null)
         {
             <div class="alert id=" mensagem" alert-success">@TempData["mensagem"]</div>
         }
-        
+
         @RenderBody()
     </div>
 </body>
