--- a/CompFacil.LojaVirtual.Web/Views/Autenticacao/Login.cshtml
+++ b/CompFacil.LojaVirtual.Web/Views/Autenticacao/Login.cshtml
@@ -31,12 +31,15 @@
         }
     </style>
 </head>
+<body style="background-image: url('../../background.jpg')">
+
+</body>
 </html>
 <div class="container" style="margin-top:40px">
     <div class="row">
         <div class="col-sm-6 col-md-4 col-md-offset-4">
             <div class="panel panel-default">
-                <div class="panel-heading" >
+                <div class="panel-heading">
                     <strong> CompFacil - Login</strong>
                 </div>
                 <div class="panel-body">
