--- a/CompFacil.LojaVirtual.Web/Views/Carrinho/Index.cshtml
+++ b/CompFacil.LojaVirtual.Web/Views/Carrinho/Index.cshtml
@@ -21,10 +21,18 @@
         @foreach(var item in Model.Carrinho.ItensCarrinho)
         {
             <tr>
-                <td class="text-center">@item.Quantidade</td>
                 <td class="text-center">@item.Produto.Nome</td>
                 <td class="text-right">@item.Produto.Preco.ToString("c")</td>
                 <td class="text-right">@((item.Quantidade * item.Produto.Preco).ToString("c"))</td>
+                <td>
+                    @using(Html.BeginForm("Adicionar", "Carrinho"))
+                    {
+                        @Html.Hidden("ProdutoID", item.Produto.ProdutoID)
+                        @Html.TextBox("Quantidade", item.Quantidade, new { @class = "Quantidade-TextBox", @type="number", min="1", max="10" })
+                        @Html.HiddenFor(x => x.ReturnUrl)
+                        <input class="btn btn-sm btn-danger" type="submit" value="Atualizar" />
+                    }
+                </td>
                 <td>
                     @using (Html.BeginForm("Remover", "Carrinho"))
                     {
