--- a/CompFacil.LojaVirtual.Web/Views/Shared/_Layout.cshtml
+++ b/CompFacil.LojaVirtual.Web/Views/Shared/_Layout.cshtml
@@ -13,12 +13,12 @@
 <body>
     <div class="navbar navbar-inverse" role="navigation">
         <a class="navbar-brand" href="#">Compfacil Loja Virtual - Seu esporte é aqui</a>
-        <div id="checkout" class="col-xs-8">
+        <div id="checkout">
             @Html.Action("Resumo", "Carrinho")
         </div>
     </div>
     <div class="row panel">
-        <div id="categorias" class="col-xs-3">
+        <div id=" categorias" class="col-xs-3">
             @Html.Action("Menu", "Categoria")
         </div>
         <div id="categorias" class="col-xs-8">
