UPDATE: Bundling and Minification

--- a/CompFacil.LojaVirtual.Web/Views/Cliente/Index.cshtml
+++ b/CompFacil.LojaVirtual.Web/Views/Cliente/Index.cshtml
@@ -1,19 +1,8 @@
-﻿@{
-    Layout = null;
+﻿
+@{
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
+<h2>Index</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=devide-width" />
-    <title>Index</title>
-</head>
-<body>
-    <div>
-        Sou o Controller - @ViewBag.Controller
-        <br/>
-        Sou a Action = @ViewBag.Action
-    </div>
-</body>
-</html>
