--- a/CompFacil.LojaVirtual.Web/Views/Shared/_Layout.cshtml
+++ b/CompFacil.LojaVirtual.Web/Views/Shared/_Layout.cshtml
@@ -1,14 +1,15 @@
-﻿<!DOCTYPE html>
+﻿@using System.Web.Optimization;
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Compfacil Loja Virtual - </title>
-    <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap-theme.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/ErrorStyle.css" rel="stylesheet" />
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/modernizr-2.6.2.js"></script>    
+    
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
+    
 </head>
 <body>
     <div class="navbar navbar-inverse" role="navigation">
